Add link to new user page

--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -1,5 +1,7 @@
 <h1>Users</h1>
 
+<%= link "New user", to: user_path(@conn, :new) %>
+
 <table class="table">
   <%= for user <- @users do %>
     <tr>
